--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
             <h1>Frogger: HTML5 powered</h1>
         </header>
         <div id="game">
-            <!-- width="1000px" height="500px" -->
-            <canvas width="1000px" height="500px" id="froggerGame">
+            <!--ORIGINAL SIZE width="1000px" height="500px" -->
+            <canvas width="800px" height="500px" id="froggerGame">
             </canvas>
+            <!--
             <div id="descWindow">
                 <img src="PATH TO CROSS"/>
                 <h1>Frogger</h1>
@@ -33,9 +34,11 @@
                 </div>
                 </div>
             </div>
+            -->
         </div>
         <audio src="sounds/headshot.mp3" id="boom"></audio>
-        <audio src="sounds/theme.mp3" id="theme" autoplay="true"></audio>
+        <audio src="sounds/splash.mp3" id="splash"></audio>
+        <!--<audio src="sounds/theme.mp3" id="theme" autoplay="true"></audio>-->
         <footer>
             <p>Copyright goes there etc</p>
         </footer>
