--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1; user-scalable=0;">
         <link rel="stylesheet" href="style.css"/>
         <title>The HTML5 Frogger</title>
+        <!--[if lt IE 9]>
+        <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
         <script src="AssetManager.js"></script>
         <script src="Car.js"></script>
         <script src="Frog.js"></script>
